test/files/neg/t11643.check
t11643.scala:6: error: implicit error;
!I i: Int
  def g(j: Int) = j + f
                      ^
t11643.scala:7: error: implicit error;
!I i: Int
  def k(j: Int) = { val x = j + f ; 42 }
                                ^
2 errors
